# Recal

./: .gitmodules  CMakeLists.txt  README.md  clang-format.txt
Log20/: .gitmodules  CMakeLists.txt  LICENSE  README.md
Log20/.github/workflows/: build-multi-platform.yml
Log20/src/Log20/: CMakeLists.txt
Log20/src/Log20/include/Log20/: DefaultLogger.ixx  Log20.ixx  Logger.ixx
Log20/src/Log20/src/: AppName.cxx  AppName.ixx  AsyncTaskQueue.cxx  AsyncTaskQueue.ixx  DefaultLogger.cxx  Logger.cxx
Log20/test/: CMakeLists.txt
Log20/test/src/: UnitTests.cpp
src/Apps/CoralDemoApp/: CMakeLists.txt
src/Apps/CoralDemoApp/src/: main.cpp
src/Apps/CoralDemoApp/src/Shaders/: UniformColor.frag.glsl  UniformColor.vert.glsl
src/Apps/EditorApp/: CMakeLists.txt
src/Apps/EditorApp/src/: main.cpp
src/Common/: CMakeLists.txt
src/Common/include/Common/: AsyncTaskQueue.hpp  AsyncTaskQueue.ixx  CRC32.hpp  CRC32.ixx  Event.hpp  Event.ixx  Finally.hpp  Finally.ixx  Multiton.hpp  Multiton.ixx  NonCopyable.hpp  NonCopyable.ixx  Singleton.hpp  Singleton.ixx  SmartPointer.hpp  SmartPointer.ixx  TypeName.hpp  TypeName.ixx  Visitor.hpp  Visitor.ixx
src/Common/src/: AsyncTaskQueue.cpp  AsyncTaskQueue.cxx
src/Coral/: CMakeLists.txt  README.md
src/Coral/include/Coral/: Buffer.ixx  BufferView.ixx  CommandBuffer.ixx  CommandQueue.ixx  Context.ixx  Coral.ixx  DescriptorSet.ixx  Fence.ixx  Framebuffer.ixx  Image.ixx  PipelineLayout.ixx  PipelineState.ixx  RAII.ixx  Sampler.ixx  Semaphore.ixx  ShaderModule.ixx  Surface.ixx  Texture.ixx  Texture2D.ixx  Texture3D.ixx  Types.ixx  UniformBlockBuilder.ixx
src/Coral/src/: Buffer.cpp  BufferView.cpp  CommandBuffer.cpp  CommandQueue.cpp  Context.cpp  DescriptorSet.cpp  Factory.ixx  Fence.cpp  Framebuffer.cpp  Image.cpp  PipelineLayout.cpp  PipelineState.cpp  RAII.cpp  Sampler.cpp  Semaphore.cpp  ShaderModule.cpp  Surface.cpp  Texture2D.cpp  Texture3D.cpp  UniformBlockBuilder.cpp  UniformBuffer.cpp
src/Coral/src/Vulkan/: Buffer.cpp  Buffer.ixx  BufferPool.cpp  BufferPool.ixx  BufferView.cpp  BufferView.ixx  CommandBuffer.cpp  CommandBuffer.ixx  CommandQueue.cpp  CommandQueue.ixx  Context.cpp  Context.ixx  DescriptorSet.cpp  DescriptorSet.ixx  Fence.cpp  Fence.ixx  Format.ixx  Framebuffer.cpp  Framebuffer.ixx  Image.cpp  Image.ixx  PipelineLayout.cpp  PipelineLayout.ixx  PipelineState.cpp  PipelineState.ixx  Sampler.cpp  Sampler.ixx  Semaphore.cpp  Semaphore.ixx  ShaderModule.cpp  ShaderModule.ixx  Surface.cpp  Surface.ixx  SurfaceWin32.cpp  SurfaceWin32.ixx  Texture2D.cpp  Texture2D.ixx  Texture3D.cpp  Texture3D.ixx  VulkanHeader.h
src/Editor/: CMakeLists.txt
src/Editor/include/Editor/: CameraController.ixx  EditorApplication.ixx  EditorLayer.ixx  EditorOverlayRenderer.ixx  System.ixx
src/Editor/src/: CameraController.cpp  EditorApplication.cpp  EditorLayer.cpp  EditorOverlayRenderer.cpp
src/Editor/src/Rendering/Shaders/: FullscreenQuad.vertex.glsl  Selection.fragment.glsl
src/Engine/: CMakeLists.txt
src/Engine/private/src/: Application.cpp  ApplicationImpl.cpp  EditorLayer.cpp  EngineLayer.cpp  Layer.cpp  Runner.cpp  SceneLayer.cpp  WindowImpl.cpp  WindowLayer.cpp
src/Engine/private/src/Application/: Application.cpp  ApplicationImpl.cpp  ApplicationLayer.cpp  CommandLineArguments.cpp  ImGUILayer.cpp  Layer.cpp  Window.cpp  WindowImpl.cpp
src/Engine/private/src/Component/: CameraComponent.cpp  Component.cpp  DirectionalLightComponent.cpp  LightComponent.cpp  MeshComponent.cpp  PointLightComponent.cpp  SkyLightComponent.cpp  SpotLightComponent.cpp
src/Engine/private/src/Core/: BoundingBox3D.cpp  Camera.cpp  Component.cpp  DirectionalLight.cpp  ECSBase.cpp  EntryPoint.cpp  GLTFLoader.cpp  GameObject.cpp  GameObjectFactory.cpp  Image.cpp  ImageLoader.cpp  Input.cpp  Material.cpp  Mesh.cpp  MeshFactory.cpp  Object.cpp  ObjectFactory.cpp  Primitive.cpp  Range1D.cpp  Resource.cpp  Scene.cpp  SceneManager.cpp  SceneObject.cpp  Serializable.cpp  Shader.cpp  ShaderImpl.cpp  ShaderManagerImpl.cpp  ShaderRegistry.cpp  SkyLight.cpp  Texture.cpp  TextureFactory.cpp  Time.cpp  Transform.cpp  Type.cpp  TypeRegistry.cpp  TypeTraits.cpp
src/Engine/private/src/Rendering/: BlurPass.ixx  CalculateIrradianceRenderer.ixx  DebugRenderer.ixx  DefaultRenderer.cpp  DirectionalLightRenderer.ixx  DirectionalLightResource.ixx  FXAATechnique.ixx  FullscreenTechnique.cpp  FullscreenTechnique.ixx  GBuffer.cpp  GBuffer.ixx  GammaCorrectionTechnique.cpp  GammaCorrectionTechnique.ixx  GeometryRenderer.cpp  GeometryRenderer.ixx  LightResource.ixx  LightingPass.ixx  MaterialResource.cpp  MaterialResource.ixx  PostProcessingPass.cpp  PostProcessingPass.ixx  PostProcessingTechnique.ixx  PostprocessingEffect.ixx  PrimitiveResource.cpp  RenderGraph.cpp  RenderJob.cpp  RenderJob.ixx  RenderObject.cpp  RenderPass.ixx  RenderResource.cpp  RenderResource.ixx  Renderer.cpp  Renderer.ixx  SSAORenderer.cpp  (+16 more)
src/Test/: CMakeLists.txt
src/Test/src/Common/: TypeNameTests.cpp  VisitorTests.cpp
src/Tools/CoralShaderCompiler/: CMakeLists.txt
src/Tools/CoralShaderCompiler/src/: HeaderGenerator.cpp  ShaderCompiler.cpp  ShaderIncluder.cpp
src/Tools/CoralShaderCompilerCLI/: CMakeLists.txt
src/Tools/CoralShaderCompilerCLI/cmake/: CoralShaderCompiler.cmake.in
src/Tools/CoralShaderCompilerCLI/src/: main.cpp
src/Tools/MaterialGenerator/: CMakeLists.txt
src/Tools/MaterialGenerator/src/: HeaderGenerator.cpp  MaterialGenerator.cpp
src/Tools/MaterialGeneratorCLI/: CMakeLists.txt
src/Tools/MaterialGeneratorCLI/cmake/: MaterialGenerator.cmake.in
src/Tools/MaterialGeneratorCLI/src/: main.cpp
src/Tools/ShaderCompiler/: CMakeLists.txt
src/Tools/ShaderCompiler/cmake/: ShaderCompiler.cmake.in
src/Tools/ShaderCompiler/src/: GLSLShaderCompiler.cpp  GLSLShaderCompiler.h  GLSLShaderIncluder.cpp  GLSLShaderIncluder.h  HeaderGenerator.cpp  HeaderGenerator.h  main.cpp
test/: CMakeLists.txt
test/src/Log20/: LogTests.cpp
test/src/Math/: MatrixTests.cpp
test/src/Rendering/: BufferTests.cpp  BufferViewTests.cpp  ContextTests.cpp  RenderingTestFixture.cpp  RenderingTestFixture.h
(+191 files in other folders)
